[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'clickext'
version = '0.0.0'
description = 'Extended features for the Python click library'
readme = 'README.md'
license = 'MIT'
authors = [
  'lojoja <dev@lojoja.com>'
]
homepage = 'https://github.com/lojoja/clickext'
repository = 'https://github.com/lojoja/clickext'
documentation = 'https://github.com/lojoja/clickext'
classifiers = [
  'Development Status :: 3 - Alpha',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = '^3.10'
click = '^8.0'

[tool.poetry.group.dev.dependencies]
black = '^22'
pylint = '^2'
pytest = '^7'
pytest-cov = '^3'

[tool.black]
line-length = 120
target_version = ['py310']
include = '\.pyi?$'

[tool.coverage.run]
source = ['clickext']
omit = ['tests/']

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'def __repr__',
  'if log:'
]

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
addopts = '--cov'
filterwarnings = ['ignore:::.*pytest_cov*']
testpaths = ['tests']

