[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'clickext'
version = "0.1.1"
description = 'Extended features for the Python click library'
readme = 'README.md'
license = 'MIT'
authors = [
  'lojoja <dev@lojoja.com>'
]
homepage = 'https://gitea.lojoja.com/lojoja/clickext'
repository = 'https://gitea.lojoja.com/lojoja/clickext'
documentation = 'https://gitea.lojoja.com/lojoja/clickext'
classifiers = [
  'Development Status :: 3 - Alpha',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = '^3.10'
click = '^8'

[tool.poetry.group.dev.dependencies]
black = '^22.0.0'
flake8 = '^6.0.0'
pylint = '^2.0.0'
pytest = '^7.0.0'
pytest-cov = '^3.0.0'

[tool.black]
line-length = 120
target_version = ['py310']
include = '\.pyi?$'

[tool.coverage.run]
source = ['clickext']
omit = ['tests/']

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'def __repr__',
  'if log:'
]
show_missing = true

[tool.pylint.main]
ignore-paths = ['**/dist/**/*', '**/\.venv/**/*']

[tool.pylint.format]
max-line-length = 120

[tool.pyright]
ignore = ['dist/*', '.venv/*']
venvPath = '.'
venv = ['.venv']

[tool.pytest.ini_options]
addopts = '--cov'
filterwarnings = ['ignore:::.*pytest_cov*']
testpaths = ['tests']
